--- a/FAQU/FAQU.csproj
+++ b/FAQU/FAQU.csproj
@@ -53,10 +53,19 @@
     <Compile Include="Auth.Designer.cs">
       <DependentUpon>Auth.cs</DependentUpon>
     </Compile>
+    <Compile Include="emae.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="emae.Designer.cs">
+      <DependentUpon>emae.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Auth.resx">
       <DependentUpon>Auth.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="emae.resx">
+      <DependentUpon>emae.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
